<resources>
    <string name="app_name">Loan</string>

    <string name="accept">Accept</string>
    <string name="all_loans">All Loans</string>
    <string name="alternate_login">Or login with</string>
    <string name="borrow">Borrow</string>
    <string name="borrow_from">Borrow from</string>
    <string name="borrowed">Borrowed</string>
    <string name="cancel">Cancel</string>
    <string name="channel_name" translatable="false">Loan</string>
    <string name="channel_description" translatable="false">Notification for the return date of borrowed or Lent items.</string>
    <string name="contact">Contact</string>
    <string name="date_image">Image to represent date</string>
    <string name="delete">Delete</string>
    <string name="description">Description</string>
    <string name="email">E-mail</string>
    <string name="empty_date">No date</string>
    <string name="empty_list">Add some Items that you have lent or borrowed!</string>
    <string name="error_load_item">Items could not be loaded, please try again</string>
    <string name="error_required_fields_empty">Required Fields cannot be empty!</string>
    <string name="error_required_Permission">Please allow this app to read your contacts to use this option.</string>
    <string name="error_save_item">Item could not be save, please try again.</string>
    <string name="is_borrowed">Is borrowed?</string>
    <string name="item_swiped">Item deleted.</string>
    <string name="lend">Lend</string>
    <string name="lend_to">Lend to</string>
    <string name="lent">Lent</string>
    <string name="login">Login</string>
    <string name="filter">Filter</string>
    <string name="from">From</string>
    <string name="name">Name</string>
    <string name="notification_return_borrowed">Today is the last day to return %1$s to %2$s.</string>
    <string name="notification_return_lent">Today is the last day to receive %1$s to %2$s.</string>
    <string name="ok">OK</string>
    <string name="password">Password</string>
    <string name="phone_number">Phone Number</string>
    <string name="remember_switch">Send remember notification</string>
    <string name="return_date">Return Date</string>
    <string name="required_field_empty">This field cannot be empty!</string>
    <string name="returned">Returned</string>
    <string name="save">Save</string>
    <string name="search_contact">Search</string>
    <string name="telephone">Telephone Number</string>
    <string name="telephone_hint">(##)#####-####</string>
    <string name="to">To</string>
    <string name="undo">UNDO</string>
    <string name="user_photo">User photo</string>
    <string name="username">Username</string>

    <!-- Item Type -->
    <string name="book">Book</string>
    <string name="cd">CD</string>
    <string name="clothe">Clothe</string>
    <string name="dvd">DVD</string>
    <string name="money">Money</string>
    <string name="other">Other</string>

    <!-- Tools -->
    <string name="tools_date" translatable="false">01/01/2000</string>
    <string name="tools_desc" translatable="false">Testing description</string>
    <string name="tools_desc_short" translatable="false">Test desc</string>
    <string name="tools_user_name" translatable="false">Username</string>
</resources>
