<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/dialogFilterTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_default"
        android:text="@string/filter"
        android:textAllCaps="true"
        android:textStyle="bold"
        android:textColor="@android:color/black"
        android:textSize="@dimen/text_size_category"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/dialogFilterRadioBorrowedLent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_default"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dialogFilterTitle">

        <android.support.v7.widget.AppCompatRadioButton
            android:id="@+id/dialogFilterButtonAll"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/all" />

        <android.support.v7.widget.AppCompatRadioButton
            android:id="@+id/dialogFilterButtonLent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lent" />

        <android.support.v7.widget.AppCompatRadioButton
            android:id="@+id/dialogFilterButtonBorrowed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/borrowed" />

        <android.support.v7.widget.AppCompatRadioButton
            android:id="@+id/dialogFilterButtonReturned"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/returned" />
    </RadioGroup>

    <Button
        android:id="@+id/dialogFilterFilterButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_default"
        android:text="@string/accept"
        android:textAllCaps="true"
        style="@style/Widget.AppCompat.Button.Borderless"
        app:layout_constraintTop_toBottomOf="@+id/dialogFilterRadioBorrowedLent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

    <Button
        android:id="@+id/dialogFilterCancelButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_default"
        android:text="@string/cancel"
        android:textAllCaps="true"
        style="@style/Widget.AppCompat.Button.Borderless"
        app:layout_constraintTop_toBottomOf="@+id/dialogFilterRadioBorrowedLent"
        app:layout_constraintEnd_toStartOf="@+id/dialogFilterFilterButton"
        app:layout_constraintBottom_toBottomOf="parent" />

</android.support.constraint.ConstraintLayout>