<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".features.itemdetail.ItemDetailActivity">

    <ToggleButton
        android:id="@+id/itemDetailBorrowToggle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_default"
        android:layout_marginStart="@dimen/margin_default"
        android:textOff="@string/borrow"
        android:textOn="@string/borrow"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/itemDetailLendToggle"
        tools:checked="true"/>

    <ToggleButton
        android:id="@+id/itemDetailLendToggle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_default"
        android:layout_marginEnd="@dimen/margin_default"
        android:textOff="@string/lend"
        android:textOn="@string/lend"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@id/itemDetailBorrowToggle"
        app:layout_constraintEnd_toEndOf="parent"/>

    <android.support.v7.widget.AppCompatSpinner
        android:id="@+id/itemDetailTypeSpinner"
        style="@style/Base.Widget.AppCompat.Spinner.Underlined"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_default"
        app:layout_constraintTop_toBottomOf="@+id/itemDetailBorrowToggle"
        app:layout_constraintStart_toStartOf="parent" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/itemDetailDescriptionInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_default"
        app:layout_constraintTop_toBottomOf="@+id/itemDetailTypeSpinner"
        app:layout_constraintStart_toStartOf="parent">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/itemDetailDescriptionEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/description" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/itemDetailReturnDateInputLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_default"
        app:layout_constraintTop_toBottomOf="@+id/itemDetailDescriptionInputLayout"
        app:layout_constraintStart_toStartOf="parent">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/itemDetailReturnDateEdit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="false"
            android:ems="@integer/return_date_ems"
            android:hint="@string/return_date" />

    </android.support.design.widget.TextInputLayout>

    <TextView
        android:id="@+id/itemDetailContactText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_default"
        android:text="@string/contact"
        android:textAllCaps="true"
        android:textStyle="bold"
        android:textSize="@dimen/text_size_category"
        app:layout_constraintTop_toBottomOf="@+id/itemDetailReturnDateInputLayout"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/itemDetailSearchContactButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_default"
        android:minHeight="25dp"
        android:text="@string/search_contact"
        android:textAllCaps="true"
        android:background="@drawable/bg_button_outline"
        android:onClick="searchContact"
        app:layout_constraintTop_toTopOf="@+id/itemDetailContactText"
        app:layout_constraintBottom_toBottomOf="@+id/itemDetailContactText"
        app:layout_constraintStart_toEndOf="@+id/itemDetailContactText" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/itemDetailPersonNameInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_default"
        app:layout_constraintTop_toBottomOf="@+id/itemDetailContactText"
        app:layout_constraintStart_toStartOf="parent">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/itemDetailPersonNameEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/itemDetailPersonEmailInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_default"
        app:layout_constraintTop_toBottomOf="@+id/itemDetailPersonNameInputLayout"
        app:layout_constraintStart_toStartOf="parent">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/itemDetailPersonEmailEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/itemDetailPersonPhoneInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_default"
        app:layout_constraintTop_toBottomOf="@+id/itemDetailPersonEmailInputLayout"
        app:layout_constraintStart_toStartOf="parent">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/itemDetailPersonPhoneEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:hint="@string/phone_number" />

    </android.support.design.widget.TextInputLayout>

    <TextView
        android:id="@+id/itemDetailRememberText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_default"
        android:text="@string/remembre_switch"
        app:layout_constraintTop_toBottomOf="@+id/itemDetailPersonPhoneInputLayout"
        app:layout_constraintStart_toStartOf="parent"/>

    <android.support.v7.widget.SwitchCompat
        android:id="@+id/itemDetailRememberSwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_default"
        app:layout_constraintTop_toTopOf="@+id/itemDetailRememberText"
        app:layout_constraintBottom_toBottomOf="@+id/itemDetailRememberText"
        app:layout_constraintEnd_toEndOf="parent"
        />

</android.support.constraint.ConstraintLayout>